# gtest_demo

./: CMakeLists.txt  main.cpp
factoriallib/: falgo.cpp  falgo.h
test/gbenchmark/: CMakeLists.txt
test/gtest/: CMakeLists.txt  falgo_test.cpp
